==> playboy51job/WeiXinDirect_git/MiCO_SDK_2.4.1/MiCO_SDK_2.4.1/Board/MiCOKit-LPC5410x/platform.c <==
#include "stdio.h"
#include "string.h"
#include "platform.h"
#include "platform_config.h"
#include "platform_peripheral.h"
#include "platform_config.h"
#include "PlatformLogging.h"
#include "spi_flash_platform_interface.h"
#include "wlan_platform_common.h"
#include "MiCOKit_EXT/micokit_ext.h"
#define ADC_SAMPLE_RATE 10000000 // 10MHz

void platform_init_peripheral_irq_priorities( void )
{
  uint32_t i;
  uint32_t minPri = (1<<__NVIC_PRIO_BITS) - 1 - 1;
  NVIC_SetPriorityGrouping(0x00000000);

  for (i=0; i<48; i++)
  {
      // NVIC->IP[i] = 0xC0;
      NVIC_SetPriority((IRQn_Type)i, minPri);
  }
  NVIC_SetPriority(SysTick_IRQn, minPri);
  /* Interrupt priority setup. Called by MiCO/platform/MCU/STM32F2xx/platform_init.c */
  NVIC_SetPriority( RTC_IRQn         ,  minPri ); /* RTC Wake-up event   */
  NVIC_SetPriority( SPI0_IRQn        ,  minPri ); /* SPI0          */
  NVIC_SetPriority( SPI1_IRQn        ,  3 ); /* WLAN SDIO           */
  NVIC_SetPriority( DMA_IRQn         ,  3 ); /* WLAN SPI DMA        */
  NVIC_SetPriority( UART0_IRQn       ,  minPri - 1); /* MICO_UART_0         */
  NVIC_SetPriority( UART1_IRQn       ,  minPri - 1); /* MICO_UART_1         */
  NVIC_SetPriority( UART2_IRQn       ,  minPri - 1); /* MICO_UART_2         */
  NVIC_SetPriority( UART3_IRQn       ,  minPri - 1); /* MICO_UART_3         */
  NVIC_SetPriority( I2C0_IRQn        ,  minPri ); /* MICO_I2C_0         */
  NVIC_SetPriority( I2C1_IRQn        ,  minPri ); /* MICO_I2C_1         */
  NVIC_SetPriority( I2C2_IRQn        ,  minPri ); /* MICO_I2C_2         */

  NVIC_SetPriority( PIN_INT0_IRQn    , minPri ); /* GPIO                */
  NVIC_SetPriority( PIN_INT1_IRQn    , minPri ); /* GPIO                */
  NVIC_SetPriority( PIN_INT2_IRQn    , minPri ); /* GPIO                */
  NVIC_SetPriority( PIN_INT3_IRQn    , minPri ); /* GPIO                */
  NVIC_SetPriority( PIN_INT4_IRQn    , minPri ); /* GPIO                */
  NVIC_SetPriority( PIN_INT5_IRQn    , minPri ); /* GPIO                */
  NVIC_SetPriority( PIN_INT6_IRQn    , minPri ); /* GPIO                */
  NVIC_SetPriority( PIN_INT7_IRQn    , minPri ); /* GPIO                */
}

void init_platform( void )
{
   MicoGpioInitialize( (mico_gpio_t)MICO_SYS_LED, OUTPUT_PUSH_PULL );
   MicoGpioOutputLow( (mico_gpio_t)MICO_SYS_LED );
   MicoGpioInitialize( (mico_gpio_t)MICO_RF_LED, OUTPUT_OPEN_DRAIN_NO_PULL );
   MicoGpioOutputHigh( (mico_gpio_t)MICO_RF_LED );

   //  Initialise EasyLink buttons
   MicoGpioInitialize( (mico_gpio_t)EasyLink_BUTTON, INPUT_HIGH_IMPEDANCE );
   mico_init_timer(&_button_EL_timer, RestoreDefault_TimeOut, _button_EL_Timeout_handler, NULL);
   MicoGpioEnableIRQ( (mico_gpio_t)EasyLink_BUTTON, IRQ_TRIGGER_BOTH_EDGES, _button_EL_irq_handler, NULL );

#ifdef USE_MiCOKit_EXT
  dc_motor_init( );
  dc_motor_set( 0 );
#endif
}

void init_platform_bootloader( void )
{
  MicoGpioInitialize( (mico_gpio_t)MICO_SYS_LED, OUTPUT_PUSH_PULL );
  MicoGpioOutputLow( (mico_gpio_t)MICO_SYS_LED );
  MicoGpioInitialize( (mico_gpio_t)MICO_RF_LED, OUTPUT_OPEN_DRAIN_NO_PULL );
  MicoGpioOutputHigh( (mico_gpio_t)MICO_RF_LED );

  MicoGpioInitialize((mico_gpio_t)BOOT_SEL, INPUT_PULL_UP);
  MicoGpioInitialize((mico_gpio_t)MFG_SEL, INPUT_HIGH_IMPEDANCE);

#ifdef USE_MiCOKit_EXT
  dc_motor_init( );
  dc_motor_set( 0 );

  rgb_led_init();
  rgb_led_open(0, 0, 0);
#endif
}
